# school-manage

./: README.md  biome.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  error.rs  main.rs
src-tauri/src/database/: mod.rs
src-tauri/src/libs/: date.rs  mod.rs  token.rs
src-tauri/src/modules/: mod.rs
src-tauri/src/modules/abouts/: schemas.rs  services.rs  tauri_app.rs
src-tauri/src/modules/app/: services.rs  tauri_app.rs
src-tauri/src/modules/auth/: schemas.rs  services.rs  tauri_app.rs
src-tauri/src/modules/class_students/: schemas.rs  services.rs  tauri_app.rs
src-tauri/src/modules/class_subjects/: schemas.rs  services.rs  tauri_app.rs
src-tauri/src/modules/classes/: schemas.rs  services.rs  tauri_app.rs
src-tauri/src/modules/exam_marks/: schemas.rs  services.rs  tauri_app.rs
src-tauri/src/modules/exam_subjects/: schemas.rs  services.rs  tauri_app.rs
src-tauri/src/modules/exams/: schemas.rs  services.rs  tauri_app.rs
src-tauri/src/modules/parents/: schemas.rs  services.rs  tauri_app.rs
src-tauri/src/modules/school_classes/: services.rs  tauri_app.rs
src-tauri/src/modules/school_students/: services.rs  tauri_app.rs
src-tauri/src/modules/school_teachers/: mod.rs  services.rs  tauri_app.rs
src-tauri/src/modules/schools/: schemas.rs  services.rs  tauri_app.rs
src-tauri/src/modules/student_attendences/: schemas.rs  services.rs  tauri_app.rs
src-tauri/src/system/: admin.rs  mod.rs  tauri_app.rs
(+140 files in other folders)
